fix: visible inputs for ios

--- a/projects/aws-test/src/scss/sections/_inputs.scss
+++ b/projects/aws-test/src/scss/sections/_inputs.scss
@@ -23,6 +23,7 @@ $style: "inputs";
   &__input {
     position: absolute;
     appearance: none;
+    visibility: hidden;
     background: $white;
     color: $white;
     &:checked + .inputs__box {
